--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -1,10 +1,63 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <title>Title</title>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="../style/aboutus.css" />
+    <title></title>
 </head>
 <body>
 
+<div class="about-section">
+    <h1>À propos de nous</h1>
+    <p>Nous sommes une équipe passionnée et créative d'experts en architecture d'intérieur. Notre mission est de transformer votre espace en un lieu harmonieux et fonctionnel qui reflète votre style unique.</p>
+    <p>Nous croyons que chaque projet est une collaboration entre notre équipe et vous, nos précieux clients. Nous nous efforçons de comprendre vos besoins, vos goûts et vos aspirations afin de créer des espaces qui dépassent vos attentes.</p>
+</div>
+<h2 style="text-align:center">Notre équipe</h2>
+<div class="row">
+    <div class="column">
+        <div class="card">
+            <img src="/image/per1.jpg" alt="Jane" style="width:100%">
+            <div class="container">
+                <h2>lara</h2>
+                <p class="title">CEO & Founder</p>
+                <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+                <p>jane@example.com</p>
+                <p><button class="button">Contact</button></p>
+            </div>
+        </div>
+    </div>
+
+    <div class="column">
+        <div class="card">
+            <img src="/image/per2.jpg" alt="Mike" style="width:100%">
+            <div class="container">
+                <h2>Mike Ross</h2>
+                <p class="title">Art Director</p>
+                <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+                <p>mike@example.com</p>
+                <p><button class="button">Contact</button></p>
+            </div>
+        </div>
+    </div>
+
+    <div class="column">
+        <div class="card">
+            <img src="/image/per3.jpg" alt="John" style="width:100%">
+            <div class="container">
+                <h2>John Doe</h2>
+                <p class="title">Designer</p>
+                <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+                <p>john@example.com</p>
+                <p><button class="button">Contact</button></p>
+            </div>
+        </div>
+    </div>
+</div>
+<footer>
+    <p>&copy; 2023 Votre entreprise d'intérieur design. Tous droits réservés.</p>
+</footer>
 </body>
 </html>
